# RTXPT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Rtxpt/: AccelerationStructureUtil.h  AccumulationPass.cpp  AccumulationPass.h  AccumulationPass.hlsl  AdvancedSample.cpp  CMakeLists.txt  CommandLine.h  DebugLines.hlsl  ExportVisibilityBuffer.hlsl  ExtendedScene.cpp  ExtendedScene.h  IntroSample.cpp  LocalConfig.cpp  LocalConfig.h  PTPipelineBaker.cpp  PTPipelineBaker.h  PathTracerBridgeDonut.hlsli  PathTracerBridgeNull.hlsli  PostProcess.cpp  PostProcess.h  PostProcess.hlsl  RayTracingPass.cpp  RenderTargets.cpp  RenderTargets.h  Sample.cpp  Sample.h  Sample.hlsl  SampleCommon.cpp  SampleCommon.h  SampleConstantBuffer.h  SampleNull.hlsl  SampleUI.cpp  SampleUI.h  ShaderDebug.cpp  ShaderDebug.h  ShaderDebug.hlsli  SubInstanceData.h  ZoomTool.cpp  ZoomTool.h  shaders.cfg
Rtxpt/Bindings/: LightingBindings.hlsli  SceneBindings.hlsli  ShaderResourceBindings.hlsli
Rtxpt/GPUSort/: GPUSort.cpp  GPUSort.h  GPUSort.hlsl
Rtxpt/Lighting/: LightsBaker.cpp  LightsBaker.h  LightsBaker.hlsl
Rtxpt/Lighting/Distant/: EnvMapBaker.cpp  EnvMapBaker.h  EnvMapBaker.hlsl  EnvMapImportanceSamplingBaker.cpp  EnvMapImportanceSamplingBaker.h  EnvMapImportanceSamplingBaker.hlsl  SampleProceduralSky.cpp  SampleProceduralSky.h  SampleProceduralSky.hlsli
Rtxpt/Materials/: MaterialsBaker.cpp  MaterialsBaker.h
Rtxpt/Misc/: CommandLine.cpp
Rtxpt/NRD/: NrdConfig.cpp  NrdIntegration.cpp  NrdIntegration.h
Rtxpt/OpacityMicroMap/: OmmBaker.cpp  OmmBaker.h  OmmBuildQueue.cpp  OmmBuildQueue.h
Rtxpt/PathTracer/: Config.h  PathPayload.hlsli  PathState.hlsli  PathTracer.hlsli  PathTracerBridge.hlsli  PathTracerDebug.hlsli  PathTracerHelpers.hlsli  PathTracerNEE.hlsli  PathTracerNestedDielectrics.hlsli  PathTracerShared.h  PathTracerStablePlanes.hlsli  PathTracerTypes.hlsli  SampleGenerators.hlsli  StablePlanes.hlsli  StatelessSampleGenerators.hlsli
Rtxpt/PathTracer/Lighting/: LightSampler.hlsli  LightShaping.hlsli  LightingAlgorithms.hlsli  LightingTypes.h  PolymorphicLight.hlsli
Rtxpt/PathTracer/Materials/: MaterialPT.h  MaterialTypes.hlsli
Rtxpt/PathTracer/Rendering/Materials/: BxDF.hlsli
Rtxpt/PathTracer/Scene/: SceneDefines.hlsli
Rtxpt/PathTracer/Scene/Material/: MaterialData.hlsli  ShadingUtils.hlsli
Rtxpt/PathTracer/Utils/: ColorHelpers.hlsli  Geometry.hlsli  Utils.hlsli
Rtxpt/RTXDI/: DIFinalShading.hlsl  FusedDIGIFinalShading.hlsl  GIFinalShading.hlsl  GISpatialResampling.hlsl  GITemporalResampling.hlsl  GenerateInitialSamples.hlsl  HelperFunctions.hlsli  PolymorphicLightRTXDI.hlsli  PrepareLights.hlsl  PrepareLightsPass.cpp  PrepareLightsPass.h  PreprocessEnvironmentMap.hlsl  PresampleEnvironmentMap.hlsl  PresampleLights.hlsl  PresampleReGIR.hlsl  RayTracingPass.cpp  RtxdiApplicationBridge.hlsli  RtxdiApplicationSettings.cpp  RtxdiApplicationSettings.h  RtxdiPass.cpp  RtxdiPass.h  RtxdiResources.cpp  RtxdiResources.h  ShaderParameters.h  SpatialResampling.hlsl  SpatioTemporalResampling.hlsl  SurfaceData.hlsli  TemporalResampling.hlsl
Rtxpt/SampleCommon/: AccelerationStructureUtil.h  CaptureScriptManager.cpp  CommandLine.cpp  CommandLine.h  ComputePipelineBaker.cpp  ComputePipelineBaker.h  ExtendedScene.cpp  ExtendedScene.h  LocalConfig.cpp  PTPipelineBaker.cpp  PTPipelineBaker.h  RenderTargets.cpp  RenderTargets.h  SampleBaseApp.cpp  SampleBaseApp.h  SampleCommon.cpp  SampleCommon.h  ShaderCompilerUtils.cpp  ShaderCompilerUtils.h  SplashScreen.cpp
Rtxpt/SampleGame/: GameMisc.cpp  GameMisc.h  GameModel.cpp  GameModel.h  GamePropComponent.cpp  GamePropComponent.h  GameProps.cpp  GameProps.h  GameScene.cpp  GameScene.h  SampleGame.cpp  SampleGame.h  SampleGameProp.cpp  SampleGameProp.h
Rtxpt/Shaders/: PathTracerBridge.hlsli  PathTracerBridgeDonut.hlsli  PathTracerSample.hlsl  SampleConstantBuffer.h  ShaderDebug.hlsli  SubInstanceData.h  TestRaygenPP.hlsl
Rtxpt/Shaders/Bindings/: LightingBindings.hlsli  SceneBindings.hlsli  ShaderResourceBindings.hlsli
Rtxpt/Shaders/IntroSample/: IntroCommon.hlsli  IntroPathTracer.hlsl  RasterDeferredLighting.hlsl
Rtxpt/Shaders/Misc/: GBufferHelpers.hlsli  OmmGeometryDebugData.hlsli
Rtxpt/Shaders/PathTracer/: Config.h  PathPayload.hlsli  PathState.hlsli  PathTracer.hlsli  PathTracerDebug.hlsli  PathTracerHelpers.hlsli  PathTracerNEE - indirect light testing.hlsli  PathTracerNEE.hlsli  PathTracerNestedDielectrics.hlsli  PathTracerShared.h  PathTracerStablePlanes.hlsli  PathTracerTypes.hlsli  StablePlanes.hlsli
Rtxpt/Shaders/PathTracer/Lighting/: EnvMap.hlsli  LightSampler.hlsli  LightingAlgorithms.hlsli  LightingConfig.h  LightingTypes.h  PolymorphicLight.h  PolymorphicLight.hlsli
Rtxpt/Shaders/PathTracer/Materials/: MaterialPT.h  MaterialTypes.hlsli
Rtxpt/Shaders/PathTracer/Rendering/Materials/: BxDF.hlsli  IBSDF.hlsli  StandardBSDF.hlsli
Rtxpt/Shaders/PathTracer/Scene/: ShadingData.hlsli
Rtxpt/Shaders/PathTracer/Utils/: ColorHelpers.hlsli  NoiseAndSequences.hlsli  Packing.hlsli  SampleGenerators.hlsli  StatelessSampleGenerators.hlsli  Utils.hlsli
Rtxpt/ToneMapper/: ToneMapperParams.hlsli  ToneMapping.ps.hlsli  ToneMappingPasses.cpp  ToneMappingPasses.h  ToneMapping_cb.h
